--- a/content/_shared.yml
+++ b/content/_shared.yml
@@ -1,4 +1,4 @@
-name: Ñame
-profession: Gräphic Designer
+name: DotCrosse
+profession: UX Designer and Quality Engineer
 email: |
-  <hi@yourdomain.com>
+  <dotcrosse@cyne.jp>
